Bug 66531 - Hotplugging HDMI during Weston lock screen unlocks the screen
Summary: Hotplugging HDMI during Weston lock screen unlocks the screen
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-03 05:46 UTC by U. Artie Eoff
Modified: 2013-07-08 19:35 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Weston output log (7.12 KB, text/plain)
2013-07-03 05:58 UTC, U. Artie Eoff
Details
weston-desktop-shell gdb backtrace (4.98 KB, text/plain)
2013-07-03 06:01 UTC, U. Artie Eoff
Details

Description U. Artie Eoff 2013-07-03 05:46:43 UTC
When Weston is in locked state (i.e. lock surface showing), hotplugging a HDMI display causes Weston to unlock automatically (i.e. lock surface goes away without user interaction).

Steps
-----
1. On laptop with LVDS, ensure HDMI display is disconnected/unplugged.
2. Launch weston --backend=drm-backend.so -i10
3. Wait for Weston to go into idle/blank screen state.
4. Move mouse to wake Weston and activate the lock screen surface/window.
5. Hotplug HDMI display into connector.
6. Observe Weston unlocks automatically without lock surface user interaction.

Software
--------
wayland (master) heads/master-0-g2e07587
fontconfig (master) heads/master-0-gcbf06d7
drm (master) libdrm-2.4.46-0-gc6d73cf
mesa (master) heads/master-0-g84f367e
libxkbcommon (master) heads/master-0-g6f06eb5
pixman (master) heads/master-0-g279bdcd
cairo (master) heads/master-0-g7b8fc77
weston (master) heads/master-0-gb08b329
Comment 1 U. Artie Eoff 2013-07-03 05:58:22 UTC
Created attachment 81929 [details]
Weston output log
Comment 2 U. Artie Eoff 2013-07-03 06:01:47 UTC
Created attachment 81930 [details]
weston-desktop-shell gdb backtrace
Comment 3 U. Artie Eoff 2013-07-03 06:11:59 UTC
(In reply to comment #2)
> Created attachment 81930 [details]
> weston-desktop-shell gdb backtrace

Same weston-desktop-shell backtrace as bug 66529
Comment 4 Rob Bradford 2013-07-08 10:42:34 UTC
So it looks like the lock screen goes away because the client providing it (desktop shell has crashed)

This hotplug bug was fixed in: 

commit e4925495365abcfa5a92bb462a79b92af6d56f26
Author: Ander Conselvan de Oliveira <ander.conselvan.de.oliveira@intel.com>
Date:   Fri Jul 5 16:05:28 2013 +0300

    desktop-shell: Don't crash on output hotplug
    
    The panel and background were never created for hotplugged outputs and
    since some parts of the code assume that they always exist that would
    lead to desktop-shell client to crash in that case.
    
    This was easier to spot when the display was locked, because Weston
    respawns the shell client and the user might not notice since there is
    no flicker.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=66531


When you have the opportunity please verify.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.